# stationary_light

./: .gitignore  LICENSE.txt  README.md
cpp/: CMakeLists.txt  adiabatic_eit.h  bandstructure.cpp  bandstructure.h  cphase_gate.cpp  cphase_gate.h  cphase_gate_plots.cpp  dispersion_relation_plots.cpp  dual_v_scattering.h  ensemble_scattering.cpp  ensemble_scattering.h  ensemble_scattering_common.h  findroot.cpp  findroot.h  gate_common.cpp  gate_common.h  gaussian_electric_field_modes.h  gaussian_modes.h  hamiltonian_params.h  lambda_hamiltonian.cpp  lambda_hamiltonian.h  quadratic_equation.h  random_seeds.h  threaded_eigen_matrix.h  urandom.cpp  urandom.h
cpp/cmake/: FindNLopt.cmake
cpp/quadrature/: CMakeLists.txt  quad.cpp  quad.h
python/cphase_gate/: common_typeset_info.py  fig2.py  fig3.py  figS03.py  figS05.py  figS06.py  figS07.py  figS08.py  figS09.py  figS10.py  figS11.py  figS12.py  r_and_t_plot_common.py
python/cphase_gate/plot_data/: cphase_fidelity_NAtoms_aE_a_opt_dualv_sym_sagnac_g1d_0.05_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.266.txt  cphase_fidelity_NAtoms_aE_a_opt_dualv_sym_sagnac_g1d_0.05_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.266_numSeeds_100.txt  cphase_fidelity_NAtoms_aE_a_opt_lambda_sagnac_g1d_0.05_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.5.txt  cphase_fidelity_NAtoms_nE_a_opt_lambda_sagnac_g1d_0.05_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.5.txt  cphase_fidelity_OmegaScattering_and_OmegaStorageRetrieval_aE_a_opt_dualv_sym_sagnac_g1d_0.05_N_10000_kd_0.266.txt  cphase_fidelity_OmegaScattering_and_OmegaStorageRetrieval_aE_a_opt_lambda_sagnac_g1d_0.05_N_10000_kd_0.5.txt  cphase_fidelity_kL1_aE_a_opt_dualv_sym_sagnac_g1d_0.05_N_10000_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.5_kL2_0.txt  cphase_fidelity_kL1_aE_a_opt_lambda_sagnac_g1d_0.05_N_10000_OmegaScattering_1_OmegaStorageRetrieval_1_kd_0.5_kL2_0.txt  eit_storage_models_comparison_g1d_0.05_NAtoms_10000_OmegaStorageRetrieval_1_kd_0.266.txt  (+2 more)
python/dispersion_relations/: common_typeset_info.py  extra_t_r_plot_continuum_model.py  fig2.py  fig3.py  fig5.py  fig6.py  fig7.py  matplotlib_util.py  plot_dispersion_relations_common.py
(+3 files in other folders)
